2006-03-13  Roland Dreier  <rdreier@cisco.com>

	* Release version 1.0.

2006-03-06  Roland Dreier  <rdreier@cisco.com>

	* include/infiniband/verbs.h: Add enum ibv_rate to define encoding
	of static_rate field (based on a patch from Jack Morgenstein
	<jackm@mellanox.co.il>).

2006-03-06  Ralph Campbell  <ralphc@pathscale.com>

	* src/init.c (find_drivers): Fix minor memory leak: call
	globfree() to free memory allocated by glob().

2006-02-23  Dotan Barak  <dotanb@mellanox.co.il>

	* src/cmd.c (ibv_cmd_create_srq): Add support for kernel ABI
	version 6 (take SRQ capacity from kernel response to create SRQ).

2006-02-16  Roland Dreier  <rdreier@cisco.com>

	* Release version 1.0-rc7.

	* src/cmd.c (ibv_cmd_create_qp): Add support for kernel ABI
	version 5 (properly aligned struct ibv_create_qp_resp).

2006-02-15  Roland Dreier  <rdreier@cisco.com>

	* src/cmd.c (ibv_cmd_create_qp): Allow userspace device-specific
	driver to pass in a response buffer, so that the low-level driver
	in the kernel can pass back device-specific information.  This
	changes the userspace driver API, since the signature of
	ibv_cmd_create_qp() is changed.

2006-02-14  Roland Dreier  <rdreier@cisco.com>

	* Release version 1.0-rc6.

2006-02-13  Dotan Barak  <dotanb@mellanox.co.il>

	* examples/devinfo.c (print_hca_cap): Print board_id from sysfs,
	if present.

2006-02-13  Roland Dreier  <rdreier@cisco.com>

	* examples/asyncwatch.c, examples/device_list.c,
	examples/devinfo.c: Remove cpu_to_be64()/be64_to_cpu() and use
	htonll()/ntohll() from <infiniband/arch.h>.

2006-02-13  Dotan Barak  <dotanb@mellanox.co.il>

	* src/cmd.c (ibv_cmd_query_qp, ibv_cmd_query_srq),
	include/infiniband/driver.h: Add driver interface for calling
	query QP and query SRQ kernel commands.

	* include/infiniband/kern-abi.h: Add kernel ABI for query QP and
	query SRQ.

	* src/verbs.c (ibv_query_qp, ibv_query_srq),
	include/infiniband/verbs.h: Add query QP and query SRQ library